lyricue (1:3.0.33-1) maverick; urgency=low

  * Make pressing enter in available songlist add song to playlist (makes interactive search work)

 -- Chris Debenham <chris@adebenham.com>  Wed, 6 Jul 2011 17:30:00 +1000

lyricue (1:3.0.32-1) maverick; urgency=low

  * Handle symlinks properly when importing a directory
  * Allow pressing enter when searching for a song to add first match

 -- Chris Debenham <chris@adebenham.com>  Mon, 4 Jul 2011 17:30:00 +1000

lyricue (1:3.0.31-1) maverick; urgency=medium

  * Allow any image, video or music file to be added via 'add directory'
  * Sort list of song when importing
  * Fix for importing text songs with unicode

 -- Chris Debenham <chris@adebenham.com>  Sat, 2 Jul 2011 17:30:00 +1000

lyricue (1:3.0.30-1) maverick; urgency=medium

  * Fix looping of background videos
  * Fix progress bar for videos

 -- Chris Debenham <chris@adebenham.com>  Mon, 27 Jun 2011 17:30:00 +1000

lyricue (1:3.0.29-1) maverick; urgency=medium

  * Fix scaling on natty
  * Add support for importing pptx (via workaround)
  * Initial support for audio files in playlist

 -- Chris Debenham <chris@adebenham.com>  Mon, 27 Jun 2011 17:30:00 +1000

lyricue (1:3.0.28-1) maverick; urgency=medium

  * Fix text colour not being updated on re-config

 -- Chris Debenham <chris@adebenham.com>  Mon, 18 Apr 2011 17:30:00 +1000

lyricue (1:3.0.27-1) maverick; urgency=medium

  * Fix text colour not being updated
  * Fix automatic looping for sublists

 -- Chris Debenham <chris@adebenham.com>  Mon, 28 Mar 2011 17:30:00 +1000

lyricue (1:3.0.26-3) maverick; urgency=low

  * Rebuild for natty
  * Fixes for Clutter-gst 1.x

 -- Chris Debenham <chris@adebenham.com>  Sun, 27 Mar 2011 17:30:00 +1000

lyricue (1:3.0.26-1) maverick; urgency=medium

  * Fix crash when background not specified fully

 -- Chris Debenham <chris@adebenham.com>  Wed, 5 Jan 2011 17:30:00 +1000

lyricue (1:3.0.25-1) maverick; urgency=medium

  * Fix video playback related crash (LP#675090)
