@@ -70,3 +70,5 @@ void do_transition(ClutterActor *new,
 void set_shader_num (ClutterActor *actor, gint new_no);
 
 gboolean hide_cursor ();
+
+gboolean stop_media ();
