@@ -1,6 +1,7 @@
 lyricue (1:3.0.33-1) maverick; urgency=low
 
   * Make pressing enter in available songlist add song to playlist (makes interactive search work)
+  * Enable videos to play for 3 seconds in miniview
 
  -- Chris Debenham <chris@adebenham.com>  Wed, 6 Jul 2011 17:30:00 +1000
 
